// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecule - ForgotPasswordForm Should render 1`] = `
<div>
  <Form
    buttonLabel="Label"
    className="ForgotPasswordForm"
    emailPlaceholder="Email"
    emailValidationMessage="Email validation message"
    errorMessage="Error message"
    onSubmit={[Function]}
  >
    <Component
      errorClassName="ForgotPassword-error"
      errorText="Email validation message"
      name="email"
      placeholder="Email"
      required={true}
      type="email"
    />
    <div>
      <Component>
        Label
      </Component>
    </div>
  </Form>
</div>
`;

exports[`Molecule - ForgotPasswordForm Should render in submitting state 1`] = `
<div>
  <Form
    buttonLabel="Label"
    className="ForgotPasswordForm"
    emailPlaceholder="Email"
    emailValidationMessage="Email validation message"
    errorMessage="Error message"
    onSubmit={[Function]}
    submitting={true}
  >
    <Component
      errorClassName="ForgotPassword-error"
      errorText="Email validation message"
      name="email"
      placeholder="Email"
      required={true}
      type="email"
    />
    <div>
      <Component
        disabled={true}
      >
        Label
      </Component>
    </div>
  </Form>
</div>
`;

exports[`Molecule - ForgotPasswordForm Should render with a sign-in error 1`] = `
<div>
  <Form
    buttonLabel="Label"
    className="ForgotPasswordForm"
    emailPlaceholder="Email"
    emailValidationMessage="Email validation message"
    errorMessage="Error message"
    onSubmit={[Function]}
    signInError={true}
  >
    <Component
      errorClassName="ForgotPassword-error"
      errorText="Email validation message"
      name="email"
      placeholder="Email"
      required={true}
      type="email"
    />
    Error message
    <div>
      <Component>
        Label
      </Component>
    </div>
  </Form>
</div>
`;
